# oauth-learning

./: .gitignore  README.md
bff_proxy/: .gitignore  Cargo.toml
bff_proxy/prisma/: schema.prisma
bff_proxy/prisma-cli/: Cargo.toml
bff_proxy/prisma/migrations/20221231203129_first/: migration.sql
bff_proxy/src/: main.rs
bff_proxy/src/api/: mod.rs  oauth_github.rs
client/: package-lock.json  package.json
client/src/: App.tsx
serverless-functions/oauth_github_start/: Cargo.toml
serverless-functions/oauth_github_start/src/: main.rs
serverless-functions/rust_lambda/: Cargo.toml
serverless-functions/rust_lambda/src/: main.rs
serverless-functions/rust_lambda/src/handlers/: create_user_handler.rs  get_user_handler.rs
serverless-functions/rust_lambda/src/models/: user.rs
